# DSA-L11-Attacker-Defender

./: .gitignore  CMakeLists.txt  README.md  hash.h  main.cpp  test_teams.sh
submissions/sample_team/: attacker_setup.cpp  defender_setup.cpp
template/: attacker_setup.h  defender_setup.h
